//This file acts as a contract between the client and server,
// describing both the structure of the data and the remote procedure calls (RPCs)
// they use to communicate.

syntax = "proto3";
package grpc;

option go_package = "disys_chitchat_activity03/proto";

//Our ChitChat Service. Contains only one rpc method, which receives and sends a stream of messages.
service ChitChat {
  rpc SendMessage(stream MessageLog) returns (stream MessageLog) {}
}

//Our message, containing necessary information.
message MessageLog {
  int32 timestamp = 1;
  string componentName = 2;
  string eventType = 3;
  string clientName = 4;
  bool hasJoined = 5;
}